express-ingress-fix.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-express-ingress
  namespace: vibecode
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: vibecode-cors@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - vibecode.gigahard.ai
  rules:
  - host: vibecode.gigahard.ai
    http:
      paths:
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: simple-express
            port:
              number: 5000
      - path: /localhost:8000
        pathType: Prefix
        backend:
          service:
            name: simple-express
            port:
              number: 5000
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: cors
  namespace: vibecode
spec:
  headers:
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - OPTIONS
    accessControlAllowOriginList:
      - "*"
    accessControlAllowCredentials: true
    accessControlAllowHeaders:
      - "*"
    accessControlMaxAge: 100
    addVaryHeader: true
